update readme with mongo stuff; cleaning up some css

--- a/README.rdoc
+++ b/README.rdoc
@@ -5,3 +5,10 @@ To commit, do
 a = Sysys.Act.find(1)
 a.get('transaction')
 a.save()
+
+== To create active admin user
+
+  * AdminUser.create :email => 'admin@example.com', :password => 'password', :password_confirmation => 'password'
+
+
+
